TAG: seqcacheload-3-1-1-1
DATE: 03/30/2005
STAFF: lec
RELEASE: A
CHANGES: 
1) TR 6700

TAG: seqcacheload-2-0-7
DATE: 12/07/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.1
2) TR 6118

TAG: seqcacheload-2-0-6
DATE: 12/01/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.1
2) TR 6118

TAG: seqcacheload-2-0-5
DATE: 11/23/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.1
2) TR 6118

TAG: seqcacheload-2-0-4
DATE: 10/11/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) MGI 3.1

TAG: seqcacheload-2-0-3
DATE: 08/26/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) Assembly/Coordinate Cache

TAG: seqcacheload-2-0-2
TAG: seqcacheload-2-0-1
TAG: seqcacheload-2-0-0
DATE: 08/24/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) Assembly/qualifier

TAG: seqcacheload-1-0-12
DATE: 08/24/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) improve performance of seqmarker.py

TAG: seqcacheload-1-0-11
DATE: 06/04/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) check bcp file before truncating/loading

TAG: seqcacheload-1-0-10
DATE: 06/03/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) don't cache dummy annotations if the real thing exists

TAG: seqcacheload-1-0-9
DATE: 06/02/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) don't cache dummy annotations if the real thing exists

TAG: seqcacheload-1-0-8
DATE: 05/13/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added update statistics

TAG: seqcacheload-1-0-7
TAG: seqcacheload-1-0-6
TAG: seqcacheload-1-0-5
DATE: 03/30/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added "annotation" date to cache tables
2) added seqdescription.csh seqdescription.py

TAG: seqcacheload-1-0-4
DATE: 03/26/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added "annotation" date to cache tables

TAG: seqcacheload-1-0-3
TAG: seqcacheload-1-0-2
DATE: 03/25/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added "annotation" date to cache tables

TAG: seqcacheload-1-0-1
DATE: 02/06/2004
STAFF: lec
RELEASE: A
CHANGES: 
1) added "output" directory

TAG: seqcacheload-1-0-0
DATE: 12/02/2003
STAFF: lec
RELEASE: A
CHANGES: New CVS repository
